# fastapi-sample

./: .dockerignore  Dockerfile  README.md  app.py  cli.py  docker-compose.yml  pyproject.toml  services.py
